--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -171,14 +171,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 66,
       "id": "629435bd-6bfa-44de-91d9-3b2937713257",
       "metadata": {
-        "id": "629435bd-6bfa-44de-91d9-3b2937713257"
+        "id": "629435bd-6bfa-44de-91d9-3b2937713257",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "05eafbc4-2954-4dbc-c672-776a8131f8a9"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Integer value: 123\n",
+            "Float value: 123.0\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to convert a string \"123\" to an integer and a float and print the results."
+        "# Write a Python program to convert a string \"123\" to an integer and a float and print the results.\n",
+        "string_number = \"123\"\n",
+        "\n",
+        "integer_value = int(string_number)\n",
+        "\n",
+        "float_value = float(string_number)\n",
+        "\n",
+        "print(f\"Integer value: {integer_value}\")\n",
+        "print(f\"Float value: {float_value}\")\n"
       ]
     },
     {
@@ -2765,23 +2786,19 @@
         "# Write a Python program to find the largest and smallest values in a dictionary.\n",
         "\n",
         "def find_largest_and_smallest(my_dict):\n",
-        "    # Check if the dictionary is empty\n",
+        "\n",
         "    if not my_dict:\n",
         "        return None, None\n",
         "\n",
-        "    # Find the largest and smallest values\n",
         "    largest_value = max(my_dict.values())\n",
         "    smallest_value = min(my_dict.values())\n",
         "\n",
         "    return largest_value, smallest_value\n",
         "\n",
-        "# Example dictionary\n",
         "my_dict = {\"a\": 50, \"b\": 20, \"c\": 100, \"d\": 10, \"e\": 75}\n",
         "\n",
-        "# Call the function\n",
         "largest, smallest = find_largest_and_smallest(my_dict)\n",
         "\n",
-        "# Print the results\n",
         "print(\"Largest value:\", largest)\n",
         "print(\"Smallest value:\", smallest)\n"
       ]
@@ -2822,7 +2839,6 @@
         "def square(number):\n",
         "    return number ** 2\n",
         "\n",
-        "# Example usage\n",
         "num = 5\n",
         "result = square(num)\n",
         "print(f\"The square of {num} is {result}\")\n"
@@ -2853,7 +2869,6 @@
         "def add_numbers(a, b):\n",
         "    return a + b\n",
         "\n",
-        "# Example usage\n",
         "num1 = 10\n",
         "num2 = 20\n",
         "result = add_numbers(num1, num2)\n",
@@ -2885,19 +2900,15 @@
         "# Write a Python function to check if a given number is prime.\n",
         "\n",
         "def is_prime(num):\n",
-        "    # Check if the number is less than 2 (1 and negative numbers are not prime)\n",
         "    if num <= 1:\n",
         "        return False\n",
         "\n",
-        "    # Check for factors from 2 to the square root of the number\n",
         "    for i in range(2, int(num ** 0.5) + 1):\n",
         "        if num % i == 0:\n",
         "            return False\n",
         "\n",
-        "    # If no factors are found, the number is prime\n",
         "    return True\n",
         "\n",
-        "# Example usage\n",
         "num = 29\n",
         "if is_prime(num):\n",
         "    print(f\"{num} is a prime number.\")\n",
@@ -2930,14 +2941,11 @@
         "# Write a Python function to calculate the factorial of a number using recursion.\n",
         "\n",
         "def factorial(n):\n",
-        "    # Base case: factorial of 0 or 1 is 1\n",
         "    if n == 0 or n == 1:\n",
         "        return 1\n",
-        "    # Recursive case: n * factorial of (n-1)\n",
         "    else:\n",
         "        return n * factorial(n - 1)\n",
         "\n",
-        "# Example usage\n",
         "num = 5\n",
         "result = factorial(num)\n",
         "print(f\"The factorial of {num} is {result}\")\n"
@@ -2973,7 +2981,6 @@
         "    else:\n",
         "        return base * power(base, exponent - 1)\n",
         "\n",
-        "# Example usage\n",
         "base = 3\n",
         "exponent = 4\n",
         "result = power(base, exponent)\n",
@@ -3008,7 +3015,6 @@
         "        count += 1\n",
         "    return count\n",
         "\n",
-        "# Example usage\n",
         "my_list = [10, 20, 30, 40, 50]\n",
         "result = list_length(my_list)\n",
         "print(f\"The length of the list is {result}\")\n"
@@ -3038,15 +3044,12 @@
       "source": [
         "#  keywordWrite a Python function that accepts both positional and arguments and prints the sum of positional arguments.\n",
         "def sum_positional_args(*args, **kwargs):\n",
-        "    # Sum the positional arguments (args)\n",
         "    total = sum(args)\n",
         "\n",
-        "    # Print the sum of positional arguments\n",
         "    print(f\"The sum of positional arguments is: {total}\")\n",
         "\n",
-        "# Example usage\n",
-        "sum_positional_args(1, 2, 3, 4, 5)  # Only positional arguments\n",
-        "sum_positional_args(10, 20, 30, a=100, b=200)  # Positional and keyword arguments\n"
+        "sum_positional_args(1, 2, 3, 4, 5)\n",
+        "sum_positional_args(10, 20, 30, a=100, b=200)\n"
       ]
     },
     {
@@ -3072,13 +3075,11 @@
       "source": [
         "# Write a Python function to find the maximum of two numbers using keyword arguments.\n",
         "def max_of_two_numbers(*, num1, num2):\n",
-        "    # Compare the two numbers and return the maximum\n",
         "    if num1 > num2:\n",
         "        return num1\n",
         "    else:\n",
         "        return num2\n",
         "\n",
-        "# Example usage\n",
         "result = max_of_two_numbers(num1=10, num2=20)\n",
         "print(f\"The maximum of the two numbers is {result}\")\n"
       ]
@@ -3106,13 +3107,11 @@
       "source": [
         "# Write a Python function that accepts a list of numbers and returns their product.\n",
         "def product_of_numbers(numbers):\n",
-        "    # Initialize the product variable to 1\n",
         "    product = 1\n",
         "    for num in numbers:\n",
-        "        product *= num  # Multiply each number to the product\n",
+        "        product *= num\n",
         "    return product\n",
         "\n",
-        "# Example usage\n",
         "numbers = [2, 3, 4]\n",
         "result = product_of_numbers(numbers)\n",
         "print(f\"The product of the numbers is {result}\")\n"
@@ -3141,13 +3140,11 @@
       "source": [
         "# Write a Python function to check if a number is even or odd using the modulo operator.\n",
         "def check_even_odd(number):\n",
-        "    # Use modulo operator to check if the number is even or odd\n",
         "    if number % 2 == 0:\n",
         "        return \"Even\"\n",
         "    else:\n",
         "        return \"Odd\"\n",
         "\n",
-        "# Example usage\n",
         "num = 7\n",
         "result = check_even_odd(num)\n",
         "print(f\"The number {num} is {result}.\")\n"
@@ -3186,7 +3183,6 @@
         "\n",
         "squares = [x**2 for x in range(1, 11)]\n",
         "\n",
-        "# Print the resulting list\n",
         "print(squares)\n"
       ]
     },
@@ -3212,13 +3208,10 @@
       ],
       "source": [
         "# Write a Python program to filter out all even numbers from a list using list comprehension.\n",
-        "# Original list of numbers\n",
         "numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
         "\n",
-        "# Using list comprehension to filter out even numbers\n",
         "odd_numbers = [num for num in numbers if num % 2 != 0]\n",
         "\n",
-        "# Print the resulting list\n",
         "print(odd_numbers)\n"
       ]
     },
