--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -138,11 +138,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 68,
       "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67",
       "metadata": {
         "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67",
-        "outputId": "ec41cf17-2da5-4cfc-96aa-31bd0101657e",
+        "outputId": "0e7d56d1-a2a6-4633-8564-ccab2c838204",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -154,7 +154,7 @@
           "text": [
             "addition: 11\n",
             "subtraction: -1\n",
-            "multiplication: 30\n",
+            "multiplicationa: 30\n",
             "division: 0.8333333333333334\n"
           ]
         }
@@ -165,7 +165,7 @@
         "b=6\n",
         "print(\"addition:\",a+b)\n",
         "print(\"subtraction:\",a-b)\n",
-        "print(\"multiplicationa*b)\n",
+        "print(\"multiplicationa:\",a*b)\n",
         "print(\"division:\",a/b)"
       ]
     },
