--- a/assignments/100-pandas-puzzles.ipynb
+++ b/assignments/100-pandas-puzzles.ipynb
@@ -55,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "collapsed": true,
         "id": "YEoDA0PsfnhW"
@@ -76,7 +76,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "collapsed": true,
         "id": "4VxIDJ2FfnhX",
@@ -116,13 +116,99 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "collapsed": true,
-        "id": "Z4alwrCkfnhY"
+        "id": "Z4alwrCkfnhY",
+        "outputId": "c31bca02-c78f-4d08-f81a-bf476c30e477",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/_distutils_hack/__init__.py:31: UserWarning: Setuptools is replacing distutils. Support for replacing an already imported distutils is deprecated. In the future, this condition will fail. Register concerns at https://github.com/pypa/setuptools/issues/new?template=distutils-deprecation.yml\n",
+            "  warnings.warn(\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "INSTALLED VERSIONS\n",
+            "------------------\n",
+            "commit                : d9cdd2ee5a58015ef6f4d15c7226110c9aab8140\n",
+            "python                : 3.10.12.final.0\n",
+            "python-bits           : 64\n",
+            "OS                    : Linux\n",
+            "OS-release            : 6.1.85+\n",
+            "Version               : #1 SMP PREEMPT_DYNAMIC Thu Jun 27 21:05:47 UTC 2024\n",
+            "machine               : x86_64\n",
+            "processor             : x86_64\n",
+            "byteorder             : little\n",
+            "LC_ALL                : en_US.UTF-8\n",
+            "LANG                  : en_US.UTF-8\n",
+            "LOCALE                : en_US.UTF-8\n",
+            "\n",
+            "pandas                : 2.2.2\n",
+            "numpy                 : 1.26.4\n",
+            "pytz                  : 2024.2\n",
+            "dateutil              : 2.8.2\n",
+            "setuptools            : 75.1.0\n",
+            "pip                   : 24.1.2\n",
+            "Cython                : 3.0.11\n",
+            "pytest                : 8.3.3\n",
+            "hypothesis            : None\n",
+            "sphinx                : 8.1.3\n",
+            "blosc                 : None\n",
+            "feather               : None\n",
+            "xlsxwriter            : None\n",
+            "lxml.etree            : 5.3.0\n",
+            "html5lib              : 1.1\n",
+            "pymysql               : None\n",
+            "psycopg2              : 2.9.10\n",
+            "jinja2                : 3.1.4\n",
+            "IPython               : 7.34.0\n",
+            "pandas_datareader     : 0.10.0\n",
+            "adbc-driver-postgresql: None\n",
+            "adbc-driver-sqlite    : None\n",
+            "bs4                   : 4.12.3\n",
+            "bottleneck            : 1.4.2\n",
+            "dataframe-api-compat  : None\n",
+            "fastparquet           : None\n",
+            "fsspec                : 2024.10.0\n",
+            "gcsfs                 : 2024.10.0\n",
+            "matplotlib            : 3.8.0\n",
+            "numba                 : 0.60.0\n",
+            "numexpr               : 2.10.1\n",
+            "odfpy                 : None\n",
+            "openpyxl              : 3.1.5\n",
+            "pandas_gbq            : 0.24.0\n",
+            "pyarrow               : 17.0.0\n",
+            "pyreadstat            : None\n",
+            "python-calamine       : None\n",
+            "pyxlsb                : None\n",
+            "s3fs                  : None\n",
+            "scipy                 : 1.13.1\n",
+            "sqlalchemy            : 2.0.36\n",
+            "tables                : 3.10.1\n",
+            "tabulate              : 0.9.0\n",
+            "xarray                : 2024.10.0\n",
+            "xlrd                  : 2.0.1\n",
+            "zstandard             : None\n",
+            "tzdata                : 2024.2\n",
+            "qtpy                  : None\n",
+            "pyqt5                 : None\n"
+          ]
+        }
+      ],
+      "source": [
+        "pd.show_versions()"
+      ]
     },
     {
       "cell_type": "markdown",
