--- a/assignments/100-pandas-puzzles.ipynb
+++ b/assignments/100-pandas-puzzles.ipynb
@@ -116,7 +116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "collapsed": true,
         "id": "Z4alwrCkfnhY",
@@ -244,7 +244,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "collapsed": true,
         "id": "WBgmwEOlfnhZ"
@@ -260,7 +260,7 @@
         "\n",
         "labels = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j']\n",
         "\n",
-        "df = # (complete this line of code)"
+        "df = pd.DataFrame(data, index=labels)"
       ]
     },
     {
