--- a/assignments/100-pandas-puzzles.ipynb
+++ b/assignments/100-pandas-puzzles.ipynb
@@ -244,7 +244,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "collapsed": true,
         "id": "WBgmwEOlfnhZ"
@@ -274,13 +274,41 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "collapsed": true,
-        "id": "lJsigmy3fnha"
+        "id": "lJsigmy3fnha",
+        "outputId": "1bc08bc0-6802-45ac-ef8c-fb6c6ba74555",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Basic Information about the DataFrame:\n",
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "Index: 10 entries, a to j\n",
+            "Data columns (total 4 columns):\n",
+            " #   Column    Non-Null Count  Dtype  \n",
+            "---  ------    --------------  -----  \n",
+            " 0   animal    10 non-null     object \n",
+            " 1   age       8 non-null      float64\n",
+            " 2   visits    10 non-null     int64  \n",
+            " 3   priority  10 non-null     object \n",
+            "dtypes: float64(1), int64(1), object(2)\n",
+            "memory usage: 700.0+ bytes\n"
+          ]
+        }
+      ],
+      "source": [
+        "import pandas as pd\n",
+        "data={\"Name\":[\"Arch\",\"Bubby\",\"Cherry\",\"Dolly\"],\"Age\":[24,21,16,17],\"Gender\":[\"F\",\"F\",\"F\",\"F\"]}\n",
+        "print(\"Basic Information about the DataFrame:\")\n",
+        "df.info()"
+      ]
     },
     {
       "cell_type": "markdown",
