--- a/assignments/100-pandas-puzzles.ipynb
+++ b/assignments/100-pandas-puzzles.ipynb
@@ -274,7 +274,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "collapsed": true,
         "id": "lJsigmy3fnha",
@@ -321,13 +321,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "collapsed": true,
-        "id": "5fB3GGCkfnha"
+        "id": "5fB3GGCkfnha",
+        "outputId": "aa816711-88ef-4cc2-e295-6348d072477c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "First 3 rows of the DataFrame:\n",
+            "  animal  age  visits priority\n",
+            "a    cat  2.5       1      yes\n",
+            "b    cat  3.0       3      yes\n",
+            "c  snake  0.5       2       no\n"
+          ]
+        }
+      ],
+      "source": [
+        "import pandas as pd\n",
+        "data={\"Name\":[\"Arch\",\"Bubby\",\"Cherry\",\"Dolly\"],\"Age\":[24,21,16,17],\"Gender\":[\"F\",\"F\",\"F\",\"F\"]}\n",
+        "print(\"First 3 rows of the DataFrame:\")\n",
+        "print(df.head(3))\n"
+      ]
     },
     {
       "cell_type": "markdown",
