--- a/assignments/100-pandas-puzzles.ipynb
+++ b/assignments/100-pandas-puzzles.ipynb
@@ -321,34 +321,44 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "source": [
+        "import pandas as pd\n",
+        "data={\"Student\":[\"Archana\",\"Nikitha\",\"Navya\"],\"Score\":[67,89,45]}\n",
+        "df=pd.DataFrame(data)\n",
+        "print(\"First 3 rows of the DataFrame:\")\n",
+        "print(df.head(3))"
+      ],
       "metadata": {
-        "collapsed": true,
-        "id": "5fB3GGCkfnha",
-        "outputId": "aa816711-88ef-4cc2-e295-6348d072477c",
+        "id": "jqP2R5cF6meL",
+        "outputId": "423ebc48-9587-4248-b186-e7a95c012f60",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "First 3 rows of the DataFrame:\n",
-            "  animal  age  visits priority\n",
-            "a    cat  2.5       1      yes\n",
-            "b    cat  3.0       3      yes\n",
-            "c  snake  0.5       2       no\n"
+            "   Student  Score\n",
+            "0  Archana     67\n",
+            "1  Nikitha     89\n",
+            "2    Navya     45\n"
           ]
         }
-      ],
-      "source": [
-        "import pandas as pd\n",
-        "data={\"Name\":[\"Arch\",\"Bubby\",\"Cherry\",\"Dolly\"],\"Age\":[24,21,16,17],\"Gender\":[\"F\",\"F\",\"F\",\"F\"]}\n",
-        "print(\"First 3 rows of the DataFrame:\")\n",
-        "print(df.head(3))\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "collapsed": true,
+        "id": "5fB3GGCkfnha"
+      },
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
