--- a/assignments/100-pandas-puzzles.ipynb
+++ b/assignments/100-pandas-puzzles.ipynb
@@ -335,7 +335,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -371,13 +371,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "collapsed": true,
-        "id": "lmrFD8QDfnha"
+        "id": "lmrFD8QDfnha",
+        "outputId": "a0112a27-00c1-45b1-92db-c1c05895e161",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "  animal  age\n",
+            "0    cat    2\n",
+            "1    dog    3\n",
+            "2    cow    8\n"
+          ]
+        }
+      ],
+      "source": [
+        "import pandas as pd\n",
+        "data={\"animal\":[\"cat\",\"dog\",\"cow\"],\"age\":[2,3,8],\"owner\":[\"Alice\",\"Bob\",\"Charlie\"]}\n",
+        "df=pd.DataFrame(data)\n",
+        "print(df[[\"animal\",\"age\"]])"
+      ]
     },
     {
       "cell_type": "markdown",
