--- a/assignments/100-pandas-puzzles.ipynb
+++ b/assignments/100-pandas-puzzles.ipynb
@@ -371,9 +371,8 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
-        "collapsed": true,
         "id": "lmrFD8QDfnha",
         "outputId": "a0112a27-00c1-45b1-92db-c1c05895e161",
         "colab": {
@@ -410,13 +409,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "collapsed": true,
-        "id": "lUMgrKSEfnhb"
+        "id": "lUMgrKSEfnhb",
+        "outputId": "851b06d2-649f-4706-be58-3e45e624cf9a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "    animal  age\n",
+            "3  hamster    3\n",
+            "4   parrot    5\n",
+            "8   lizard    4\n"
+          ]
+        }
+      ],
+      "source": [
+        "import pandas as pd\n",
+        "data={\"animal\":[\"cat\",\"dog\",\"rabbit\",\"hamster\",\"parrot\",\"fish\",\"turtle\",\"snake\",\"lizard\",\"frog\"],\"age\":[2,4,1,3,5,1,7,2,4,3]}\n",
+        "df=pd.DataFrame(data)\n",
+        "print(df.loc[[3,4,8],['animal','age']])"
+      ]
     },
     {
       "cell_type": "markdown",
