--- a/assignments/100-pandas-puzzles.ipynb
+++ b/assignments/100-pandas-puzzles.ipynb
@@ -409,7 +409,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "collapsed": true,
         "id": "lUMgrKSEfnhb",
@@ -448,13 +448,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "collapsed": true,
-        "id": "qWfZUyAyfnhb"
+        "id": "qWfZUyAyfnhb",
+        "outputId": "32740fac-edb5-49e9-dc68-9ef862da8087",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "    animal  age  visits\n",
+            "1      dog    4       5\n",
+            "3  hamster    3       4\n"
+          ]
+        }
+      ],
+      "source": [
+        "import pandas as pd\n",
+        "data={\"animal\":[\"cat\",\"dog\",\"rabbit\",\"hamster\"],\"age\":[2,4,1,3],\"visits\":[1,5,2,4]}\n",
+        "df=pd.DataFrame(data)\n",
+        "filtered_rows=df[df[\"visits\"]>3]\n",
+        "print(filtered_rows)"
+      ]
     },
     {
       "cell_type": "markdown",
