--- a/assignments/100-pandas-puzzles.ipynb
+++ b/assignments/100-pandas-puzzles.ipynb
@@ -448,7 +448,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "collapsed": true,
         "id": "qWfZUyAyfnhb",
@@ -487,13 +487,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "collapsed": true,
-        "id": "qnn6CzvEfnhc"
+        "id": "qnn6CzvEfnhc",
+        "outputId": "a7e991de-c49c-4689-8c53-9f5fe9e852b3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   animal  age  visits\n",
+            "2  rabbit  NaN       2\n"
+          ]
+        }
+      ],
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "data={\"animal\":[\"cat\",\"dog\",\"rabbit\",\"hamster\"],\"age\":[2,4,np.nan,3],\"visits\":[1,5,2,4]}\n",
+        "df=pd.DataFrame(data)\n",
+        "missing_age_rows=df[df[\"age\"].isnull()]\n",
+        "print(missing_age_rows)\n",
+        "\n"
+      ]
     },
     {
       "cell_type": "markdown",
