--- a/assignments/100-pandas-puzzles.ipynb
+++ b/assignments/100-pandas-puzzles.ipynb
@@ -487,11 +487,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 20,
       "metadata": {
         "collapsed": true,
         "id": "qnn6CzvEfnhc",
-        "outputId": "a7e991de-c49c-4689-8c53-9f5fe9e852b3",
+        "outputId": "5e852e95-1590-451a-ef74-58ff186bc5ef",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -511,9 +511,8 @@
         "import numpy as np\n",
         "data={\"animal\":[\"cat\",\"dog\",\"rabbit\",\"hamster\"],\"age\":[2,4,np.nan,3],\"visits\":[1,5,2,4]}\n",
         "df=pd.DataFrame(data)\n",
-        "missing_age_rows=df[df[\"age\"].isnull()]\n",
-        "print(missing_age_rows)\n",
-        "\n"
+        "missing_rows=df[df[\"age\"].isnull()]\n",
+        "print(missing_rows)"
       ]
     },
     {
